Alignment fix attempt 3

--- a/app/style.css
+++ b/app/style.css
@@ -8,13 +8,11 @@
 html {
     background-color: black;
     text-align: center;
-    height: 100%;
 }
 
 body {
-    min-height: 100%;
+    min-height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: "Exo", monospace;
@@ -25,13 +23,12 @@ body {
 
 /* Body styling to mimic a CRT terminal */
 main {
-    width: 90vh;
+    max-width: 90%;
     margin: 0 auto;
     display: grid;
     color: #00FF00;
     text-shadow: 0 0 5px #00FF00, 0 0 10px #00FF00;
     animation: flicker 0.2s infinite;
-    margin-bottom: 43.2px;
     grid-template-columns: 1fr;
     align-items: center;
     gap: 30px;
@@ -258,6 +255,7 @@ img:hover {
     font-size: clamp(1rem, 1.3968992248062015rem + -0.41343669250646vw, 1.3rem);
     left: 0;
     /* Align to the left edge */
+    margin-top: auto
 }
 
 /* Small Devices */
